--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="anashkinv.androidschool2017">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -11,13 +13,16 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoadingActivity"
-            android:theme="@style/LoadingTheme">
+            android:theme="@style/WithoutActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".ListActivity" />
+        <activity
+            android:name=".CoinActivity"
+            android:theme="@style/WithoutActionBar" />
     </application>
 
 </manifest>
